--- a/pokojones/css/jo.css
+++ b/pokojones/css/jo.css
@@ -131,19 +131,29 @@ body{
 .menu-list{
     position: relative;
     max-width: 300px;
-    margin-top: 100px;
+    margin-top: 110px;
     margin-left: 200px;
+    font-family: fantasy;
+    font-size: 40px;
 }
-
+.menu-list li{
+    margin-top: 20px;
+}
+.menu-link{
+    color: black;
+}
+.menu-link:hover{
+    color: red;
+}
 
 .menu-desc{
     max-width: 500px;
     margin-top: 100px;
-    right: 40%;
+    right: 37%;
 }
 .desc{
     font-family: fantasy;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .menu-img{
